--- a/public/css/modern-business.css
+++ b/public/css/modern-business.css
@@ -1,6 +1,6 @@
 /*!
- * Start Bootstrap - Modern Business (https://startbootstrap.com/template-overviews/modern-business)
- * Copyright 2013-2019 Start Bootstrap
+ * BASS Project - Modern Business (https://startbootstrap.com/template-overviews/modern-business)
+ * Copyright 2013-2019 BASS Project
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
  */
 body {
