--- a/views/petlist.ejs
+++ b/views/petlist.ejs
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="http://127.0.0.1:3000/">Start Bootstrap</a>
+      <a class="navbar-brand" href="http://127.0.0.1:5000/">BASS Project</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -84,7 +84,7 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">품종</a>
+              <a href="detail">품종</a>
             </h4>
             <p class="card-text">특징</p>
           </div>
