--- a/views/login.ejs
+++ b/views/login.ejs
@@ -55,7 +55,7 @@
   <!-- Page Header -->
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-     
+
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" style="background-image: url('img/dogshare.jpg')">
@@ -76,16 +76,16 @@
                     <h1 align="center">CCA - Login</h1>}</script>
             <form action="/login" name = "login" method="post" style="font-family: Verdana;">
                 <div class="form-group" >
-                    <label>Address</label>
+                    <label>Account</label>
                     <input
                       type="text"
                       class="form-control"
-                      name="address"
-                      placeholder="Enter Address"
+                      name="account"
+                      placeholder="Enter Account"
                       value="0xE0B7E2fbd62DEF2C120d8755e28876dB149A9C98">
                 </div>
                 <div class="form-group">
-                    <label>Private Key</label>
+                    <label>Password</label>
                     <input
                       type="password"
                       class="form-control"
