--- a/public/css/modern-business.css
+++ b/public/css/modern-business.css
@@ -20,3 +20,11 @@ body {
 .portfolio-item {
   margin-bottom: 30px;
 }
+
+.login h2{
+  color: tomato;
+}
+.login .login-form label{
+  display: inline-block;
+  width: 50px;
+}
