--- a/views/login.ejs
+++ b/views/login.ejs
@@ -93,7 +93,8 @@
                       placeholder="Enter Private key"
                       value="0x8933DFE1F75B34BDA3D687E625AB2473A993B7B548485861DE6E0B3DCFDBA549">
                 </div>
-                <button type="submit" value="login" class="btn btn-primary">Login</button>
+                <button type="submit" value="login" class="btn btn-primary" href="index">Login</button>
+                <button type="submit" value="join" class="btn btn-primary" href="join">Join</button>
             </a>
        <p>
         </form>
