--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
             <a class="nav-link" href="login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog-post">Blog Post</a>
+            <a class="nav-link" href="test">Blog Post</a>
           </li>
         </ul>
       </div>
