--- a/views/register.ejs
+++ b/views/register.ejs
@@ -72,7 +72,7 @@
     <!-- register Form -->
     <!-- In order to set the email address and subject line for the register form go to the bin/register_me.php file. -->
     <div class="row">
-      <div class="col-lg-8 mb-4">
+      <div class="col-lg-6 mb-4">
         <h3>Register your animal</h3>
         <form name="sentMessage" id="registerForm" novalidate>
           <div class="control-group form-group">
@@ -102,9 +102,12 @@
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button href="portfolio-4-col.ejs" type="submit" class="btn btn-primary" id="registerButton">Go to Register</button>
+          <button href="petlist" type="submit" class="btn btn-primary" id="registerButton">Go to Register</button>
         </form>
-        <br>
+        
+      </div>
+      <br>
+      <div class="col-lg-6 mb-4">
         <form action="localhost/upload_image" method="post" enctype="multipart/form-data">
           <input type="file" name="test_file">
           <button type="submit">전송</button>
