--- a/views/complete.ejs
+++ b/views/complete.ejs
@@ -16,6 +16,12 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!--이미지 가운데 정렬하기-->
+  <style>
+    img { display: block; margin: 0px auto; }
+  </style>
+  <!--/.이미지 가운데정렬-->
+
 </head>
 
 <body>
@@ -52,73 +58,61 @@
     </div>
   </nav>
 
+  
   <!-- Page Content -->
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">BASS
-      <small>Detail information</small>
+    <h1 class="mt-4 mb-3">Post Title
+      <small>by
+        <a href="#">BASS Project</a>
+      </small>
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+        <a href="index.ejs">Home</a>
       </li>
-      <li class="breadcrumb-item active">detail information</li>
+      <li class="breadcrumb-item active">Blog Home 2</li>
     </ol>
 
-    <!-- Portfolio Item Row -->
     <div class="row">
 
-      <div class="col-md-8">
-        <img class="img-fluid" src="http://placehold.it/750x500" alt="">
-      </div>
+      <!-- Post Content Column -->
+      
 
-      <div class="col-md-4">
-        <h3 class="my-3">상세정보</h3>
-        <p>특징</p>
-        <!-- <h3 class="my-3">Project Details</h3>
-        <ul>
-          <li>Lorem Ipsum</li>
-          <li>Dolor Sit Amet</li>
-          <li>Consectetur</li>
-          <li>Adipiscing Elit</li>
-        </ul> -->
-      </div>
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-12">
 
+        <!-- Search Widget -->
+        <div class="card mb-4">
+          <h5 class="card-header">Search</h5>
+          <div class="card-body">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-secondary" type="button">Go!</button>
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Intro Content -->
+        <div class="row">
+          <div class="col-lg-12">
+            <img class="img-fluid rounded mb-4" src="http://placehold.it/550x650" display="block"  alt="">
+          </div>
+          
+          <!--<div class="col-lg-6">
+            <h2>About Modern Business</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+          </div>
+        -->
+        </div>
+      </div>
     </div>
-    <!-- /.row -->
-
-    <!-- Related Projects Row -->
-    <!-- <h3 class="my-4">Related Projects</h3>
-
-    <div class="row">
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-    </div> -->
     <!-- /.row -->
 
   </div>
