--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,13 +39,13 @@
             <a class="nav-link" href="register">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services">Complete</a>
+            <a class="nav-link" href="complete">Complete</a>
           </li>
           <li>
             <a class="nav-link" href="login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="test">Blog Post</a>
+            <a class="nav-link" href="upload">Blog Post</a>
           </li>
         </ul>
       </div>
@@ -96,47 +96,48 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4">Welcome to Modern Business</h1>
+    <h1 class="my-4">Welcome to BASS</h1>
 
     <!-- Marketing Icons Section -->
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Pet List</h4>
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="petlist" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Register Pet</h4>
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="register" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Complete</h4>
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="complete" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
     </div>
+    
     <!-- /.row -->
-
-    <!-- Portfolio Section -->
+<!--
+    <!- Portfolio Section --
     <h2>Portfolio Heading</h2>
 
     <div class="row">
@@ -207,9 +208,10 @@
         </div>
       </div>
     </div>
-    <!-- /.row -->
-
-    <!-- Features Section -->
+    <!- /.row --
+  -->
+<!--
+    <!- Features Section --
     <div class="row">
       <div class="col-lg-6">
         <h2>Modern Business Features</h2>
@@ -229,11 +231,13 @@
         <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
       </div>
     </div>
-    <!-- /.row -->
+    <!- /.row --
+-->
 
     <hr>
 
-    <!-- Call to Action Section -->
+<!---
+    <!- Call to Action Section --
     <div class="row mb-4">
       <div class="col-md-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
@@ -244,7 +248,8 @@
     </div>
 
   </div>
-  <!-- /.container -->
+  <!- /.container --
+-->
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
