--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,13 +39,13 @@
             <a class="nav-link" href="register">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services">Complete</a>
+            <a class="nav-link" href="complete">Complete</a>
           </li>
           <li>
             <a class="nav-link" href="login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog-post">Blog Post</a>
+            <a class="nav-link" href="complete">Blog Post</a>
           </li>
         </ul>
       </div>
@@ -72,32 +72,36 @@
   <div class="container">
      <!--<h1>CCA - Login</h1>-->
             <script>
-                if (request.getParameter("error") == null){
-                    <h1 align="center">CCA - Login</h1>}</script>
+                // if (request.getParameter("error") == null){
+                    <h1 align="center">CCA - Login</h1></script>
             <form action="/login" name = "login" method="post" style="font-family: Verdana;">
                 <div class="form-group" >
                     <label>Address</label>
                     <input
                       type="text"
                       class="form-control"
-                      name="address"
+                      name="account"
                       placeholder="Enter Address"
-                      value="0xE0B7E2fbd62DEF2C120d8755e28876dB149A9C98">
+                      >
                 </div>
                 <div class="form-group">
                     <label>Private Key</label>
                     <input
                       type="password"
                       class="form-control"
-                      name="private_key"
+                      name="password"
                       placeholder="Enter Private key"
-                      value="0x8933DFE1F75B34BDA3D687E625AB2473A993B7B548485861DE6E0B3DCFDBA549">
+                      >
                 </div>
-                <button type="submit" value="login" class="btn btn-primary" href="index">Login</button>
-                <button type="submit" value="join" class="btn btn-primary" href="join">Join</button>
-            </a>
+                <button type="submit" value="login" class="btn btn-primary">Login</button>
+                <a href="join" class="btn btn-primary">Join</a>
+                <!--<button type="submit" value="join" class="btn btn-primary">Join</button>-->
+               
+                
+              </a>
        <p>
         </form>
+        
         </div>
   <hr>
 <!-- Footer -->
