--- a/views/petlist.ejs
+++ b/views/petlist.ejs
@@ -39,13 +39,13 @@
             <a class="nav-link" href="register">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services">Complete</a>
+            <a class="nav-link" href="complete">Complete</a>
           </li>
           <li>
             <a class="nav-link" href="login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog-post">Blog Post</a>
+            <a class="nav-link" href="complete">Blog Post</a>
           </li>
         </ul>
       </div>
