--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -90,7 +90,7 @@
     <!-- /.row -->
 
     <!-- Related Projects Row -->
-    <!-- <h3 class="my-4">Related Projects</h3>
+    <h3 class="my-4">Related Projects</h3>
 
     <div class="row">
 
@@ -118,10 +118,11 @@
         </a>
       </div>
 
-    </div> -->
+    </div> 
     <!-- /.row -->
 
   </div>
+  <br><br>
   <!-- /.container -->
 
   <!-- Footer -->
