--- a/views/join.ejs
+++ b/views/join.ejs
@@ -70,10 +70,17 @@
 
 <br>
 <div class="container">
+        <div class="col-xl-10 col-lg-12 col-md-9">
+            <div class="row">
     <!--<h1>Join</h1>-->
             <script>
                 if (request.getParameter("error") == null){
-                    <h1 align="center">Join</h1>}</script>
+                    <h1 align="center">Join</h1>}
+            </script>
+            <div class="col-lg-6">
+                <img src="img/login.jpg" class="img-thumbnail" width="2000">
+            </div>
+            <div class="col-lg-6">
             <form action="/join" name = "join" method="post" style="font-family: Verdana;">
                 <div class="form-group" >
                     <label>Address</label>
@@ -92,13 +99,22 @@
                         name="password"
                         placeholder="Enter Private key"
                         value="">
+                        <small id="passwordHelpBlock" class="form-text text-muted">
+                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                              </small>
+                              
                 </div>
-                <button type="submit" value="join" class="btn btn-primary" href="login">Lets Go to Login</button>
-            </a>
-    <p>
-        </form>
-        
+                
+                <button type="submit" value="join" class="btn btn-primary btn-lg btn-block" >Lets Go to Login</button>
+                <div class="text-center">
+                        <a class="small" href="login">Already have an account? Login!</a>
+                </div>
+                <p>
+            </form>
         </div>
+    </div>
+</div>
+    </div>
 <hr>
 <!-- Footer -->
 <footer>
