--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,39 +70,39 @@
 
   <br>
   <div class="container">
-     <!--<h1>CCA - Login</h1>-->
-            <script>
-                // if (request.getParameter("error") == null){
-                    <h1 align="center">CCA - Login</h1></script>
-            <form action="/login" name = "login" method="post" style="font-family: Verdana;">
-                <div class="form-group" >
-                    <label>Address</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      name="account"
-                      placeholder="Enter Address"
-                      >
-                </div>
-                <div class="form-group">
-                    <label>Private Key</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      name="password"
-                      placeholder="Enter Private key"
-                      >
-                </div>
-                <button type="submit" value="login" class="btn btn-primary">Login</button>
-                <a href="join" class="btn btn-primary">Join</a>
-                <!--<button type="submit" value="join" class="btn btn-primary">Join</button>-->
-               
-                
-              </a>
-       <p>
-        </form>
+    <!--<script>
+      <h1 align="center">BASS - Login</h1>
+    </script>-->
+    <form action="/login" name = "login" method="post" style="font-family: Verdana;">
+      <!--<div class="col-lg-6 d-none d-lg-block" href='img/login.jpg'></div>-->
+      <div class="form-group" >
+        <label>Address</label>
+        <input
+          type="text"
+          class="form-control"
+          name="account"
+          placeholder="Enter Address"          
+        >
+      </div>
+      <div class="form-group">
+        <label>Private Key</label>
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          placeholder="Enter Private key"
+        >
+      </div>
+      <button type="submit" value="login" class="btn btn-primary btn-lg btn-block">Login</button>
+      <!--<a href="join" class="btn btn-primary">Join</a>-->
+      <!--<button type="submit" value="join" class="btn btn-primary">Join</button>-->
+      <p>
+          <div class="text-center">
+              <a class="small" href="join">Are you join us?</a>
+            </div>
+    </form>
         
-        </div>
+  </div>
   <hr>
 <!-- Footer -->
   <footer>
