--- a/views/about.ejs
+++ b/views/about.ejs
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="hhttp://127.0.0.1:5000/">BASS Project</a>
+      <a class="navbar-brand" href="http://127.0.0.1:5000/">BASS Project</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,9 +43,6 @@
           </li>
           <li>
             <a class="nav-link" href="login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="complete">Blog Post</a>
           </li>
         </ul>
       </div>
