--- a/views/join.ejs
+++ b/views/join.ejs
@@ -8,7 +8,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>BaaS Project - Join</title>
+<title>BASS Project - Join</title>
 
 <!-- Bootstrap core CSS -->
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
     <div class="carousel-item active" style="background-image: url('img/dogshare.jpg')">
         <div class="carousel-caption d-none d-md-block">
         <h1>Join</h1>
-        <p>Join BaaS, Hurry Up!!</p>
+        <p>Join BASS, Hurry Up!!</p>
         </div>
     </div>
     </div>
