--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>BaaS Project - Login</title>
+  <title>BASS Project - Login</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@
         <div class="carousel-item active" style="background-image: url('img/dogshare.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h1>Login</h1>
-            <p>Log in to join BaaS, Hurry Up!!</p>
+            <p>Log in to join BASS, Hurry Up!!</p>
           </div>
         </div>
       </div>
