--- a/views/petlist.ejs
+++ b/views/petlist.ejs
@@ -53,15 +53,15 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">BASS
-      <small>PET LIST</small>
+    <h1 class="mt-4 mb-3">Adopt
+      <small>You can show Pet-List</small>
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+        <a href="index">Home</a>
       </li>
-      <li class="breadcrumb-item active">PET LIST</li>
+      <li class="breadcrumb-item active">Petlist</li>
     </ol>
 
     <div class="row">
