--- a/views/about.ejs
+++ b/views/about.ejs
@@ -54,7 +54,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">About
-      <small>Subheading</small>
+      <small>Introduce BASS Project</small>
     </h1>
 
     <ol class="breadcrumb">
@@ -70,7 +70,7 @@
         <img class="img-fluid rounded mb-4" src="img/dogshare.jpg" alt="">
       </div>
       <div class="col-lg-6">
-        <h2>About BaaS Project</h2>
+        <h2>About BASS Project</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
